front_end folder update : 1: my_profile page 2: trophy page 3: friends page 4: all trophy.jpg

--- a/front_end/pages/search_results.html
+++ b/front_end/pages/search_results.html
@@ -253,7 +253,7 @@
                     </div>
 
                     <div class="card-body">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle center" alt="woman avatar">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20%2810%29.jpg" class="rounded-circle center">
                     </div>
 
                     <p>Username</p>
